@@ -5,6 +5,11 @@
  * lib/Mail/DKIM/MessageParser.pm: make "not implemented" messages
    more helpful
  * t/corpus/badkey_10.txt: to test key with t=s
+ * lib/Mail/DKIM/Verifier.pm: allow check_granularity() to return different
+   detail messages; describe two additional result_detail possibilities
+ * lib/Mail/DKIM/PublicKey.pm (check_granularity): check for empty g= value;
+   check for subdomain usage;
+   (subdomain_flag): helper method to look for "s" in flags
 
 2007-10-26: Jason Long <jlong@messiah.edu>
  * t/corpus/badkey_9.txt: to test empty g= in selector
